# Simple-Web-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_client.py  test_execution.py  test_server.py
webserver/: client.py  server.py
