[project]
name = "Simple web server"
version = "1.0.0"
description = "Web server used in the search for strings in a text file"
authors = [
    {name = "Ian Daniel", email = "iandan874@gmail.com"},
]
maintainers = [
  {name = "Ian Daniel", email = "iandan874@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8,<3.11"
readme = "README.md"


[tool.mypy]
# Set the level of strictness for type checking
strict = true

# Ignore missing imports for certain modules
ignore_missing_imports = true

[tool.pytest]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:function ham\\(\\) is deprecated:DeprecationWarning"
]
